--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <script src="main.js"></script>
   </head>
   <body id="grid-container">
-    <header id="header">
+    <div id="header-left">  </div>
+    <div id="header-right">  </div>
+    <header id="header">        
       <nav class="header-topnav">
         <p class="header-topnav-item">О компании</p>
         <p class="header-topnav-item">Доставка</p>
@@ -78,7 +80,19 @@
         </div>
       </div>
     </header>
-    <nav id="nav"></nav>
+    <div id="nav-left">  </div>
+        <div id="nav-right">  </div>
+    <nav class="navbar" id="nav">
+      <div class="nav-item__first">Продукция<span class="nav-item__bold">Энерготех</span></div>
+      <div class="nav-item">Стабилизаторы 220В</div>
+      <div class="nav-item">Стабилизаторы 380В</div>
+      <div class="nav-item">Генераторы 220В</div>
+      <div class="nav-item">Генераторы 380В</div>
+      <div class="nav-item">ИБП и батареи</div>
+      <div class="nav-item">Прочая техника</div>
+      <div class="nav-item">Услуги</div>
+      <div class="nav-item">Акции</div>
+    </nav>
     <main id="main"></main>
     <footer id="footer"></footer>
   </body>
