--- a/index.html
+++ b/index.html
@@ -76,20 +76,46 @@
 
   <nav class="nav" id="nav">
     <div class="wrapper">
-    <div class="navbar">
-    <div class="nav-item"><span class="nav-item__first">Продукция<span class="nav-item__bold">Энерготех</span></span></div>
-    <div class="nav-item">Стабилизаторы 220В</div>
-    <div class="nav-item">Стабилизаторы 380В</div>
-    <div class="nav-item">Генераторы 220В</div>
-    <div class="nav-item">Генераторы 380В</div>
-    <div class="nav-item">ИБП и батареи</div>
-    <div class="nav-item">Прочая техника</div>
-    <div class="nav-item">Услуги</div>
-    <div class="nav-item__last">Акции</div>
-  </div>
-</div>
+      <div class="navbar">
+        <div class="nav-item nav-item__double"><span>Продукция</span><span class="nav-item__bold">Энерготех</span></div>
+        <div class="nav-item">Стабилизаторы 220В</div>
+        <div class="nav-item">Стабилизаторы 380В</div>
+        <div class="nav-item">Генераторы 220В</div>
+        <div class="nav-item">Генераторы 380В</div>
+        <div class="nav-item">ИБП и батареи</div>
+        <div class="nav-item">Прочая техника</div>
+        <div class="nav-item">Услуги</div>
+        <div class="nav-item nav-item__active">Акции</div>
+      </div>
+
+    </div>
   </nav>
-  <main id="main"></main>
+
+  <div class="breadcrumbs" id="breadcrumbs">
+    <div class="wrapper">
+      <div class="crumbs">
+        <div class="cramb"><span>Главная</span></div>
+        <div class="cramb"><span>Статьи</span></div>
+      </div>
+    </div>
+  </div>
+
+  <main class="main" id="main">
+    <h1 class="h1-title">Полезная информация</h1>
+
+    <article class="main-content">
+      <div class="pagination">
+        <div class="pagination-number  pagination-number__active" ><span >1</span></div>
+        <div class="pagination-number"><span>2</span></div>
+        <div class="pagination-number"><span>3</span></div>
+      </div>
+
+
+      <div class="articles">
+        <div class="article"><h2>Article</h2></div>
+      </div>
+    </article>
+  </main>
   <footer id="footer"></footer>
 </body>
 
