add articles and footer

--- a/index.html
+++ b/index.html
@@ -101,22 +101,111 @@
   </div>
 
   <main class="main" id="main">
+
     <h1 class="h1-title">Полезная информация</h1>
 
-    <article class="main-content">
-      <div class="pagination">
-        <div class="pagination-number  pagination-number__active" ><span >1</span></div>
-        <div class="pagination-number"><span>2</span></div>
-        <div class="pagination-number"><span>3</span></div>
-      </div>
+
+    <div class="pagination">
+      <div class="pagination-number  pagination-number__active"><span>1</span></div>
+      <div class="pagination-number"><span>2</span></div>
+      <div class="pagination-number"><span>3</span></div>
+    </div>
 
 
-      <div class="articles">
-        <div class="article"><h2>Article</h2></div>
+    <section class="main-section" id="main-section">
+      <div class="article-preview">
+        <img class="article-preview-image" src="./images/article-preview-image.png" alt="Стабилизаторы">
+        <div class="article-preview-text">
+          <p class="article-preview-title">Как работает и зачем необходим
+            стабилизатор напряжения</p>
+          <p class="article-preview-description">Как работает и зачем необходим
+            стабилизатор напряжения
+            Стабилизаторы ЭНЕРГОТЕХ - это устройства, которые разработаны с учетом реальных условий отечественных сетей
+            электропитания, и способны удовлетворить требования самого изысканного потребителя.</p>
+        </div>
       </div>
-    </article>
+      <div class="article-preview">
+        <img class="article-preview-image" src="./images/article-preview-image.png" alt="Стабилизаторы">
+        <div class="article-preview-text">
+          <p class="article-preview-title">Как работает и зачем необходим
+            стабилизатор напряжения</p>
+          <p class="article-preview-description">Как работает и зачем необходим
+            стабилизатор напряжения
+            Стабилизаторы ЭНЕРГОТЕХ - это устройства, которые разработаны с учетом реальных условий отечественных сетей
+            электропитания, и способны удовлетворить требования самого изысканного потребителя.</p>
+        </div>
+      </div>
+
+      <div class="article-preview">
+        <img class="article-preview-image" src="./images/article-preview-image.png" alt="Стабилизаторы">
+        <div class="article-preview-text">
+          <p class="article-preview-title">Как работает и зачем необходим
+            стабилизатор напряжения</p>
+          <p class="article-preview-description">Как работает и зачем необходим
+            стабилизатор напряжения
+            Стабилизаторы ЭНЕРГОТЕХ - это устройства, которые разработаны с учетом реальных условий отечественных сетей
+            электропитания, и способны удовлетворить требования самого изысканного потребителя.</p>
+        </div>
+      </div>
+      <div class="article-preview">
+        <img class="article-preview-image" src="./images/article-preview-image.png" alt="Стабилизаторы">
+        <div class="article-preview-text">
+          <p class="article-preview-title">Как работает и зачем необходим
+            стабилизатор напряжения</p>
+          <p class="article-preview-description">Как работает и зачем необходим
+            стабилизатор напряжения
+            Стабилизаторы ЭНЕРГОТЕХ - это устройства, которые разработаны с учетом реальных условий отечественных сетей
+            электропитания, и способны удовлетворить требования самого изысканного потребителя.</p>
+        </div>
+      </div>
+
+    </section>
+    <div class="pagination">
+      <div class="pagination-number  pagination-number__active"><span>1</span></div>
+      <div class="pagination-number"><span>2</span></div>
+      <div class="pagination-number"><span>3</span></div>
+    </div>
+
   </main>
-  <footer id="footer"></footer>
+  <footer class="footer" id="footer">
+    <div class="wrapper">
+
+      <div class="footer-conten">
+        <div class="footer-adress">
+         <p> 121471, г.Москва ул. Рябиновая 55 стр. 28 </p> 
+         <p>prestizh06@mail.ru </p>
+         <p>  8 (800) 707-99-24 </p>
+          <a href="#">контакты</a>
+        </div>
+        <div class="footer-contacts">
+          <p>Режим работы:</p>
+          <p> Пн-чт с 8.00 до 19.00 </p>
+          <p>Пт с 8.00 до 17.00 </p>
+          <p>Сб с 10.00 до 15.00</p>
+          <p>Вс (по предварительной договоренности).</p>
+        </div>
+      
+
+      <nav class="footer-navbar">
+        <div class="footer-nav">
+          <p class="footer-nav-item">О компании</p>
+          <p class="footer-nav-item">Акции</p>
+          <p class="footer-nav-item">Доставка</p>
+          <p class="footer-nav-item">Оплата</p>
+          <p class="footer-nav-item">Сервис</p>
+          <p class="footer-nav-item">Возврат</p>
+        </div>
+        <p class="footer-nav-privacy">Политика обработки персональных данных</p>
+      </nav>
+
+      <div class="footer-logo">
+        <img class="footer-logo-image" src="./images/footer-logo-image.png" alt="rbru">
+        <a class="footer-logo-link">Разработка и продвижение сайта</a>
+      </div>
+    </div>
+
+    </div>
+  </footer>
 </body>
 
 </html>
