--- a/index.html
+++ b/index.html
@@ -1,211 +1,264 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Page Title</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-
-</head>
-
-<body id="grid-container">
-
-  <nav class="top" id="top">
-    <div class="wrapper">
-      <div class="top-nav">
-        <p class="top-nav-item">О компании</p>
-        <p class="top-nav-item">Доставка</p>
-        <p class="top-nav-item">Оплата</p>
-        <p class="top-nav-item">Сервис</p>
-        <p class="top-nav-item">Возврат</p>
-        <p class="top-nav-item">Статьи</p>
-        <p class="top-nav-item">Контакты</p>
-      </div>
-    </div>
-  </nav>
-
-
-  <header id="header">
-
-    <div class="header-main">
-      <div class="logo">
-        <img src="./images/logo-electroprestige.png" alt="электропрестиж" class="logo-item" />
-      </div>
-      <div class="search">
-        <div class="search-logo">
-          <img src="./images/search-logo.png" alt="search-logo" class="search-logo-item" />
-        </div>
-        <div class="search-input">
-          <input class="search-input-item" type="text" placeholder="Поиск по товарам" />
-        </div>
-        <div class="search-button">
-          <button class="search-button-item">
-            <img src="./images/search-button.png" alt="search-button" />
-          </button>
+  <body id="grid-container">
+    <nav class="top" id="top">
+      <div class="wrapper">
+        <div class="top-nav">
+          <a href="#" class="top-nav-item">О компании</a>
+          <a href="#" class="top-nav-item">Доставка</a>
+          <a href="#" class="top-nav-item">Оплата</a>
+          <a href="#" class="top-nav-item">Сервис</a>
+          <a href="#" class="top-nav-item">Возврат</a>
+          <a href="#" class="top-nav-item">Статьи</a>
+          <a href="#" class="top-nav-item">Контакты</a>
         </div>
       </div>
-      <div class="contacts">
-        <p class="phone-number">8(800)707-99-24</p>
-        <p class="timetable">9.00 - 20.00 ежедневно</p>
-      </div>
-      <div class="shopacart">
-        <div class="shopcart-compare">
-          <div class="shopcart-compare-logo">
-            <img src="./images/shopacrt-compare-logo.png" alt="" />
+    </nav>
+
+    <header id="header">
+      <div class="header-main">
+        <div class="logo">
+          <a href="#">
+            <img
+              src="./images/logo-electroprestige.png"
+              alt="электропрестиж"
+              class="logo-item"
+            />
+          </a>
+        </div>
+        <div class="search">
+          <div class="search-logo">
+            <img
+              src="./images/search-logo.png"
+              alt="search-logo"
+              class="search-logo-item"
+            />
           </div>
-          <div class="shopcart-compare-number">0</div>
-        </div>
-        <div class="shopcart-like">
-          <div class="shopcart-like-logo">
-            <img src="./images/shopacrt-like-logo.png" alt="" />
+          <div class="search-input">
+            <input
+              class="search-input-item"
+              type="text"
+              placeholder="Поиск по товарам"
+            />
           </div>
-          <div class="shopcart-like-number">0</div>
-        </div>
-        <div class="shopacrt-basket">
-          <div class="shopacrt-basket-logo">
-            <img src="./images/shopacrt-basket-logo.png" alt="" />
+          <div class="search-button">
+            <button class="search-button-item">
+              <img src="./images/search-button.png" alt="search-button" />
+            </button>
           </div>
-          <div class="shopacrt-basket-number">0</div>
+        </div>
+        <div class="contacts">
+          <p class="phone-number">8(800)707-99-24</p>
+          <p class="timetable">9.00 - 20.00 ежедневно</p>
+        </div>
+        <div class="shopacart">
+          <div class="shopcart-compare">
+            <div class="shopcart-compare-logo">
+              <a href="#"
+                ><img src="./images/shopacrt-compare-logo.png" alt=""
+              /></a>
+            </div>
+            <div class="shopcart-compare-number">0</div>
+          </div>
+          <div class="shopcart-like">
+            <div class="shopcart-like-logo">
+              <a href="#"
+                ><img src="./images/shopacrt-like-logo.png" alt=""
+              /></a>
+            </div>
+            <div class="shopcart-like-number">0</div>
+          </div>
+          <div class="shopacrt-basket">
+            <div class="shopacrt-basket-logo">
+              <a href="#"
+                ><img src="./images/shopacrt-basket-logo.png" alt=""
+              /></a>
+            </div>
+            <div class="shopacrt-basket-number">0</div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <nav class="nav" id="nav">
+      <div class="wrapper">
+        <div class="navbar">
+          <a href="#" class="nav-item nav-item__double">
+            <span>Продукция</span><span class="nav-item__bold">Энерготех</span>
+          </a>
+          <a href="#" class="nav-item">Стабилизаторы 220В</a>
+          <a href="#" class="nav-item">Стабилизаторы 380В</a>
+          <a href="#" class="nav-item">Генераторы 220В</a>
+          <a href="#" class="nav-item">Генераторы 380В</a>
+          <a href="#" class="nav-item">ИБП и батареи</a>
+          <a href="#" class="nav-item">Прочая техника</a>
+          <a href="#" class="nav-item">Услуги</a>
+          <a href="#" class="nav-item nav-item__active">Акции</a>
+        </div>
+      </div>
+    </nav>
+
+    <div class="breadcrumbs" id="breadcrumbs">
+      <div class="wrapper">
+        <div class="crumbs">
+          <div class="cramb"><span>Главная</span></div>
+          <div class="cramb"><span>Статьи</span></div>
         </div>
       </div>
     </div>
-  </header>
 
-  <nav class="nav" id="nav">
-    <div class="wrapper">
-      <div class="navbar">
-        <div class="nav-item nav-item__double"><span>Продукция</span><span class="nav-item__bold">Энерготех</span></div>
-        <div class="nav-item">Стабилизаторы 220В</div>
-        <div class="nav-item">Стабилизаторы 380В</div>
-        <div class="nav-item">Генераторы 220В</div>
-        <div class="nav-item">Генераторы 380В</div>
-        <div class="nav-item">ИБП и батареи</div>
-        <div class="nav-item">Прочая техника</div>
-        <div class="nav-item">Услуги</div>
-        <div class="nav-item nav-item__active">Акции</div>
+    <main class="main" id="main">
+      <h1 class="h1-title">Полезная информация</h1>
+
+      <div class="pagination">
+        <div class="pagination-number  pagination-number__active">
+          <span>1</span>
+        </div>
+        <div class="pagination-number"><span>2</span></div>
+        <div class="pagination-number"><span>3</span></div>
       </div>
 
-    </div>
-  </nav>
+      <section class="main-section" id="main-section">
+        <div class="article-preview">
+          <img
+            class="article-preview-image"
+            src="./images/article-preview-image.png"
+            alt="Стабилизаторы"
+          />
+          <div class="article-preview-text">
+            <p class="article-preview-title">
+              Как работает и зачем необходим стабилизатор напряжения
+            </p>
+            <p class="article-preview-description">
+              Как работает и зачем необходим стабилизатор напряжения
+              Стабилизаторы ЭНЕРГОТЕХ - это устройства, которые разработаны с
+              учетом реальных условий отечественных сетей электропитания, и
+              способны удовлетворить требования самого изысканного потребителя.
+            </p>
+          </div>
+        </div>
+        <div class="article-preview">
+          <img
+            class="article-preview-image"
+            src="./images/article-preview-image.png"
+            alt="Стабилизаторы"
+          />
+          <div class="article-preview-text">
+            <p class="article-preview-title">
+              Как работает и зачем необходим стабилизатор напряжения
+            </p>
+            <p class="article-preview-description">
+              Как работает и зачем необходим стабилизатор напряжения
+              Стабилизаторы ЭНЕРГОТЕХ - это устройства, которые разработаны с
+              учетом реальных условий отечественных сетей электропитания, и
+              способны удовлетворить требования самого изысканного потребителя.
+            </p>
+          </div>
+        </div>
 
-  <div class="breadcrumbs" id="breadcrumbs">
-    <div class="wrapper">
-      <div class="crumbs">
-        <div class="cramb"><span>Главная</span></div>
-        <div class="cramb"><span>Статьи</span></div>
+        <div class="article-preview">
+          <img
+            class="article-preview-image"
+            src="./images/article-preview-image.png"
+            alt="Стабилизаторы"
+          />
+          <div class="article-preview-text">
+            <p class="article-preview-title">
+              Как работает и зачем необходим стабилизатор напряжения
+            </p>
+            <p class="article-preview-description">
+              Как работает и зачем необходим стабилизатор напряжения
+              Стабилизаторы ЭНЕРГОТЕХ - это устройства, которые разработаны с
+              учетом реальных условий отечественных сетей электропитания, и
+              способны удовлетворить требования самого изысканного потребителя.
+            </p>
+          </div>
+        </div>
+        <div class="article-preview">
+          <img
+            class="article-preview-image"
+            src="./images/article-preview-image.png"
+            alt="Стабилизаторы"
+          />
+          <div class="article-preview-text">
+            <p class="article-preview-title">
+              Как работает и зачем необходим стабилизатор напряжения
+            </p>
+            <p class="article-preview-description">
+              Как работает и зачем необходим стабилизатор напряжения
+              Стабилизаторы ЭНЕРГОТЕХ - это устройства, которые разработаны с
+              учетом реальных условий отечественных сетей электропитания, и
+              способны удовлетворить требования самого изысканного потребителя.
+            </p>
+          </div>
+        </div>
+      </section>
+      <div class="pagination">
+        <div class="pagination-number  pagination-number__active">
+          <span>1</span>
+        </div>
+        <div class="pagination-number"><span>2</span></div>
+        <div class="pagination-number"><span>3</span></div>
       </div>
-    </div>
-  </div>
+    </main>
+    <footer class="footer" id="footer">
+      <div class="wrapper">
+        <div class="footer-conten">
+          <div class="footer-adress">
+            <p>121471, г.Москва ул. Рябиновая 55 стр. 28</p>
+            <p>prestizh06@mail.ru</p>
+            <p>8 (800) 707-99-24</p>
+            <a href="#">контакты</a>
+          </div>
+          <div class="footer-contacts">
+            <p>Режим работы:</p>
+            <p>Пн-чт с 8.00 до 19.00</p>
+            <p>Пт с 8.00 до 17.00</p>
+            <p>Сб с 10.00 до 15.00</p>
+            <p>Вс (по предварительной договоренности).</p>
+          </div>
 
-  <main class="main" id="main">
+          <nav class="footer-navbar">
+            <div class="footer-nav">
+              <a href="#" class="footer-nav-item">О компании</a>
+              <a href="#" class="footer-nav-item">Акции</a>
+              <a href="#" class="footer-nav-item">Доставка</a>
+              <a href="#" class="footer-nav-item">Оплата</a>
+              <a href="#" class="footer-nav-item">Сервис</a>
+              <a href="#" class="footer-nav-item">Возврат</a>
+            </div>
+            <a href="#" class="footer-nav-privacy">
+              Политика обработки персональных данных
+            </a>
+          </nav>
 
-    <h1 class="h1-title">Полезная информация</h1>
-
-
-    <div class="pagination">
-      <div class="pagination-number  pagination-number__active"><span>1</span></div>
-      <div class="pagination-number"><span>2</span></div>
-      <div class="pagination-number"><span>3</span></div>
-    </div>
-
-
-    <section class="main-section" id="main-section">
-      <div class="article-preview">
-        <img class="article-preview-image" src="./images/article-preview-image.png" alt="Стабилизаторы">
-        <div class="article-preview-text">
-          <p class="article-preview-title">Как работает и зачем необходим
-            стабилизатор напряжения</p>
-          <p class="article-preview-description">Как работает и зачем необходим
-            стабилизатор напряжения
-            Стабилизаторы ЭНЕРГОТЕХ - это устройства, которые разработаны с учетом реальных условий отечественных сетей
-            электропитания, и способны удовлетворить требования самого изысканного потребителя.</p>
+          <div class="footer-logo">
+            <div class="footer-logo-image">
+              <a href="#"
+                ><img
+                  class="footer-logo-item"
+                  src="./images/footer-logo-image.png"
+                  alt="rbru"
+              /></a>
+            </div>
+            <a href="#" class="footer-logo-link"
+              >Разработка и продвижение сайта</a
+            >
+          </div>
         </div>
       </div>
-      <div class="article-preview">
-        <img class="article-preview-image" src="./images/article-preview-image.png" alt="Стабилизаторы">
-        <div class="article-preview-text">
-          <p class="article-preview-title">Как работает и зачем необходим
-            стабилизатор напряжения</p>
-          <p class="article-preview-description">Как работает и зачем необходим
-            стабилизатор напряжения
-            Стабилизаторы ЭНЕРГОТЕХ - это устройства, которые разработаны с учетом реальных условий отечественных сетей
-            электропитания, и способны удовлетворить требования самого изысканного потребителя.</p>
-        </div>
-      </div>
-
-      <div class="article-preview">
-        <img class="article-preview-image" src="./images/article-preview-image.png" alt="Стабилизаторы">
-        <div class="article-preview-text">
-          <p class="article-preview-title">Как работает и зачем необходим
-            стабилизатор напряжения</p>
-          <p class="article-preview-description">Как работает и зачем необходим
-            стабилизатор напряжения
-            Стабилизаторы ЭНЕРГОТЕХ - это устройства, которые разработаны с учетом реальных условий отечественных сетей
-            электропитания, и способны удовлетворить требования самого изысканного потребителя.</p>
-        </div>
-      </div>
-      <div class="article-preview">
-        <img class="article-preview-image" src="./images/article-preview-image.png" alt="Стабилизаторы">
-        <div class="article-preview-text">
-          <p class="article-preview-title">Как работает и зачем необходим
-            стабилизатор напряжения</p>
-          <p class="article-preview-description">Как работает и зачем необходим
-            стабилизатор напряжения
-            Стабилизаторы ЭНЕРГОТЕХ - это устройства, которые разработаны с учетом реальных условий отечественных сетей
-            электропитания, и способны удовлетворить требования самого изысканного потребителя.</p>
-        </div>
-      </div>
-
-    </section>
-    <div class="pagination">
-      <div class="pagination-number  pagination-number__active"><span>1</span></div>
-      <div class="pagination-number"><span>2</span></div>
-      <div class="pagination-number"><span>3</span></div>
-    </div>
-
-  </main>
-  <footer class="footer" id="footer">
-    <div class="wrapper">
-
-      <div class="footer-conten">
-        <div class="footer-adress">
-         <p> 121471, г.Москва ул. Рябиновая 55 стр. 28 </p> 
-         <p>prestizh06@mail.ru </p>
-         <p>  8 (800) 707-99-24 </p>
-          <a href="#">контакты</a>
-        </div>
-        <div class="footer-contacts">
-          <p>Режим работы:</p>
-          <p> Пн-чт с 8.00 до 19.00 </p>
-          <p>Пт с 8.00 до 17.00 </p>
-          <p>Сб с 10.00 до 15.00</p>
-          <p>Вс (по предварительной договоренности).</p>
-        </div>
-      
-
-      <nav class="footer-navbar">
-        <div class="footer-nav">
-          <p class="footer-nav-item">О компании</p>
-          <p class="footer-nav-item">Акции</p>
-          <p class="footer-nav-item">Доставка</p>
-          <p class="footer-nav-item">Оплата</p>
-          <p class="footer-nav-item">Сервис</p>
-          <p class="footer-nav-item">Возврат</p>
-        </div>
-        <p class="footer-nav-privacy">Политика обработки персональных данных</p>
-      </nav>
-
-      <div class="footer-logo">
-        <img class="footer-logo-image" src="./images/footer-logo-image.png" alt="rbru">
-        <a class="footer-logo-link">Разработка и продвижение сайта</a>
-      </div>
-    </div>
-
-    </div>
-  </footer>
-</body>
-
+    </footer>
+  </body>
 </html>
