add adaprive menu

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
   <nav class="nav" id="nav">
     <div class="wrapper">
+      <div class="nav-btn">=</div>
       <div class="navbar">
         <a href="#" class="nav-item nav-item__double">
           <span>Продукция</span><span class="nav-item__bold">Энерготех</span>
