add burger menu

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       </div>
 
       <form class="search">
-          <img src="./images/search-logo.png" alt="search-logo" class="search-logo" />
-        <input class="search-input" type="text"  placeholder="Поиск по товарам">
+        <img src="./images/search-logo.png" alt="search-logo" class="search-logo" />
+        <input class="search-input" type="text" placeholder="Поиск по товарам">
         <button class="search-button">
-            <img src="./images/search-button.png" alt="search-button" />
-          </button>
+          <img src="./images/search-button.png" alt="search-button" />
+        </button>
       </form>
 
 
@@ -73,8 +73,9 @@
 
   <nav class="nav" id="nav">
     <div class="wrapper">
-      <div class="nav-btn">=</div>
       <div class="navbar">
+        <input type="checkbox" class="burger-button-item"></input>
+        <span class="burger"></span>
         <a href="#" class="nav-item nav-item__double">
           <span>Продукция</span><span class="nav-item__bold">Энерготех</span>
         </a>
