burger menu fix

--- a/index.html
+++ b/index.html
@@ -74,10 +74,14 @@
   <nav class="nav" id="nav">
     <div class="wrapper">
       <div class="navbar">
-        <input type="checkbox" class="burger-button-item"></input>
+
+        <input type="checkbox" class="burger-button-item">
         <span class="burger"></span>
+        </input>
+
+
         <a href="#" class="nav-item nav-item__double">
-          <span>Продукция</span><span class="nav-item__bold">Энерготех</span>
+          <span class="q">Продукция</span><span class="nav-item__bold">Энерготех</span>
         </a>
         <a href="#" class="nav-item">Стабилизаторы 220В</a>
         <a href="#" class="nav-item">Стабилизаторы 380В</a>
